--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,6 @@ code {
 @import url(./blocks/sign-up/__input/sign-up__input.css);
 @import url(./blocks/sign-up/__submit/sign-up__submit.css);
 @import url(./blocks/sign-up/__title/sign-up__title.css);
+
+/* link */
+@import url(./blocks/link/link.css);
