ref: Добавил роуты для компонентов авторизации регистрации и чата

--- a/src/blocks/frame/__title/frame__title.css
+++ b/src/blocks/frame/__title/frame__title.css
@@ -1,6 +1,6 @@
-.sign-up__title {
-  /* color: black;
+.frame__title {
+  color: black;
   font-family: 'Courier New', Courier, monospace;
   font-size: 16px;
-  margin: -23px 0 5px 2px; */
+  margin: -23px 0 5px 2px;
 }
