--- a/src/blocks/frame/frame.css
+++ b/src/blocks/frame/frame.css
@@ -1,5 +1,5 @@
-.sign-up {
-  /* margin: 0;
+.frame {
+  margin: 0;
   padding: 0;
   width: 600px;
   height: 320px;
@@ -8,5 +8,5 @@
 
   color: #42FF00;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 18px; */
+  font-size: 18px;
 }
